made changes in nginx file

--- a/mem_login_single_node.conf
+++ b/mem_login_single_node.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name your_domain_or_ip;
+    server_name _;
 
-    root /var/www/mem_login_single_node;
+    root /var/www/html/mem_login_single_node;
     index index.php index.html;
 
     access_log /var/log/nginx/mem_login_single_node_access.log;
